wip: mongoDBFileExchangeStore